--- a/gitpen/package.json
+++ b/gitpen/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^19.1.0",
     "@coreui/coreui": "^5.2.0",
     "@coreui/icons-angular": "~5.3.8",
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "@ng-bootstrap/ng-bootstrap": "^18.0.0-rc.0",
     "@popperjs/core": "~2.11.8",
     "bootstrap": "^5.3.3",
