feat(#10): add editor and saving functionallity

--- a/gitpen/package.json
+++ b/gitpen/package.json
@@ -27,7 +27,15 @@
     "@popperjs/core": "~2.11.8",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "markdown-it": "^14.1.0",
+    "marked": "^15.0.6",
+    "monaco-editor": "^0.52.2",
     "ngx-bootstrap": "^19.0.2",
+    "ngx-markdown": "^19.0.0",
+    "ngx-monaco-editor-v2": "^19.0.2",
+    "ngx-quill": "^27.0.0",
+    "quill": "^2.0.3",
+    "quill-table": "^1.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
@@ -37,6 +45,7 @@
     "@angular/cli": "^19.1.4",
     "@angular/compiler-cli": "^19.1.0",
     "@types/jasmine": "~5.1.0",
+    "@types/markdown-it": "^14.1.2",
     "jasmine-core": "~5.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
