--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
+beautifulsoup4==4.13.3
 blinker==1.9.0
 click==8.1.8
 Flask==3.1.0
+Flask-Cors==5.0.0
+html2text==2024.2.26
 itsdangerous==2.2.0
 Jinja2==3.1.5
 MarkupSafe==3.0.2
+soupsieve==2.6
+typing_extensions==4.12.2
 Werkzeug==3.1.3
